# sample-plugin

./: pyproject.toml  sample-plugin-0.1.0-py_0.conda  setup.py
recipe/: meta.yaml  pyproject.toml
sample_plugin/: __init__.py  plugin.py
